tests/NormalTests/paczka1/fuzzy1/78230090.err
Error in line 1: gr8P1b A56 86,3
Error in line 10: gr8P1b A967 23,39
Error in line 3: zeiU A967 80,9
Error in line 34: aY29xr A967 101,1
